2002-08-16  jacob berkman  <jacob@ximian.com>

	* gtk/gtkdialog.h (struct _GtkDialog): switch vbox and action_area
	back to the order that 2.0 has

Thu Aug 15 22:46:02 BST 2002  Tony Gale <gale@gtk.org>

	* docs/tutorial/gtk-tut.sgml, examples/menu/menu.c:
	  minor menu example comment fix
	  (feeling my way back in after a long absence)

Wed Aug 14 08:07:53 2002  HideToshi Tajima  <hidetoshi.tajima@sun.com>

	* gtk/gtkselection.c (gtk_selection_init): initialize
	gtk_selection_atoms only once at the 1st call.
	* gdk/x11/gdkselection-x11.c (gdk_selection_property_get): 
	set length of selection data from number of read bytes (#90595)

2002-08-14 Padraig O'Briain <padraig.obriain@sun.com>

	* gtk/gtktextview.c (gtk_text_view_focus): Move focus to
	children, if they exist, after GtkTextView is focused. (#63844)

2002-08-12  Matthias Clasen  <maclas@gmx.de>

	* gdk/gdkdisplaymanager.c: 
	* gdk/gdkdisplay.c (gdk_pointer_ungrab): Fix doc comments.

	* gdk/x11/gdkcolor-x11.c (gdk_colormap_get_screen): 
	* gdk/x11/gdkimage-x11.c (gdk_image_new_bitmap): Make parameter 
	names match those in the header file, to silence gtk-doc.

Sat Aug 10 22:18:05 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpixbuf-render.c 
	(gdk_pixbuf_render_pixmap_and_mask[_for_colormap]): Mention
	in the docs that @pixmap_return and @mask_return can
	be %NULL.

2002-08-10  Soren Sandmann  <sandmann@daimi.au.dk>

	* docs/reference/gtk/tree_widget.sgml,
	docs/reference/gtk/tmpl/gtkdialog.sgml,
	docs/reference/gtk/tmpl/gtkentry.sgml,
	docs/reference/gtk/tmpl/gtkfilesel.sgml,
	docs/reference/gtk/tmpl/gtkfontsel.sgml,
	docs/reference/gtk/tmpl/gtkfontseldlg.sgml,
	docs/reference/gtk/tmpl/gtktreemodel.sgml,
	docs/reference/gtk/tmpl/gtkwidget.sgml, gdk/x11/gdkdisplay-x11.c,
	gtk/gtkbbox.c, gtk/gtkbox.c, gtk/gtkbutton.c, gtk/gtkcellrenderer.c,
	gtk/gtkcellrendererpixbuf.c, gtk/gtkcellrenderertext.c,
	gtk/gtkcheckmenuitem.c, gtk/gtkcontainer.c, gtk/gtkcurve.c,